# Clinic_DataPlatform

./: .env.example  .gitignore  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
docker/: Airflow.Dockerfile  init-db.sh  restore-db.sh
docs/: Clinic_Design_Decisions.md
src/: __init__.py  config.py  db.py  etl.py  main.py  utils.py
src/models/: __init__.py  clinic_db.py  data.py  source.py  warehouse.py
superset/: Dockerfile  setup.sh
